[Barathraj]Ready to Deploy

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -385,16 +385,21 @@ table th {
 }
 
 /* Animation (Add After) */
+
+.item,
 .item-enter {
   opacity: 0;
 }
+.item,
 .item-enter-active {
   opacity: 1;
   transition: opacity 1000ms ease-in;
 }
+.item,
 .item-exit {
   opacity: 1;
 }
+.item,
 .item-exit-active {
   opacity: 0;
   transition: opacity 1000ms ease-in;
